# mentoring

./: README.md  any_typevar.py  base_variables.py  complex_struct.py  decorator_as_class.py  decorators_args.py  decorators_cache.py  decorators_logs.py  decorators_time.py  main.ipynb  main.py  properties.py  protocols.py  pyproject.toml
services/: auth.py
utils/: __init__.py  helpers.py  validatiors.py
